tests/baselines/reference/indexer2A.errors.txt
==== tests/cases/compiler/indexer2A.ts (4 errors) ====
    class IHeapObjectProperty {}
    class IDirectChildrenMap { 
            // BUG 765883
            hasOwnProperty(objectId: number) : boolean
            [objectId: number] : IHeapObjectProperty[] 
             ~~~~~~~~
!!! error TS1005: ']' expected.
                             ~
!!! error TS1005: ';' expected.
                               ~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
                                                    ~
!!! error TS1005: '=' expected.
    }    
    var directChildrenMap = <IDirectChildrenMap>{}; 